- Mejora en filtro 'Período' de modelo 'Pago' con rangos personalizados - Mejora en filtro 'Fecha de ocupación' en modelo 'Lugar' con rangos personalizados - Renombrado atributo 'fecha_ocupado' a 'fecha_ocupacion' en modelo 'Lugar' - Alerta de meses de atraso según parámetro en modelo 'Lugar'

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,2 @@
-- Mejorar filtro 'Periodo' en Pago con rangos personalizados
-- Mejorar filtro 'Fecha ocupacion' en Lugar con rangos personalizados
-- Alerta de atraso en Lugar
+- Cambiar formato de fechas y períodos globalmente
+- Agregar mes numérico en widget de selección de período para el modelo Pago
