Mejoras en la vista anual de pagos: estilos, URLs, búsqueda de pagos por lugar y período, incorporación de íconos de estado, enlaces a modificación de pagos

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
 - Refactorizar métodos 'get_': definir si quedan en los modelos o en las clases de administración
+- Renombrar proyecto (carpeta 'python')
+- Refactorizar vista 'tabla' (renombrar a 'pago')
