- Implementación de Bootstrap 3 en app 'cochera' - Mejoras en la vista 'Tabla anual de pagos': se muestran datos adicionales de cada lugar y de los pagos como tooltips emergentes

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- Revisar ruta de los enlaces generados y utilizados en templates
+- Refactorizar vista 'tabla' (renombrar a 'pago')
 - Refactorizar métodos 'get_': definir si quedan en los modelos o en las clases de administración
 - Renombrar proyecto (carpeta 'python')
-- Refactorizar vista 'tabla' (renombrar a 'pago')
